--- a/sections/contrib.tex
+++ b/sections/contrib.tex
@@ -1,4 +1,39 @@
 \section{La modernisation et les performances du Disque de Phaistos}
 \label{contrib}
 
-Lorem ipsum dolor sit amet.
+\begin{center}
+    $\prec \cdot$ --- $\cdot \succ$ 
+\end{center}
+
+PhaistOS tire son nom de la découverte archéologique du disque de Phaistos, 
+rappelant par son aspect un disque dur. Les lettres ``OS'' sont en majuscules 
+pour rappeler le système d'exploitation (Operating System), une belle 
+coincidence bien exploitée par Nick. 
+
+\blockquote[Wikipédia][--]{\textit{Le disque de Phaistos ou disque de Phaestos 
+est un disque d'argile cuite découvert en 1908 par l'archéologue italien Luigi 
+Pernier sur le site archéologique du palais minoen de Phaistos, en Crète.}
+}
+
+\begin{center}
+    $\prec \cdot$ --- $\cdot \succ$ 
+\end{center}
+
+Durant le long du stage sur ce projet, j'ai pu entretenir un journal 
+récapitulant mon expérience quotidienne, ce journal est disponible au lien 
+suivant :
+
+\begin{center}
+\href{https://github.com/McReaper/InternshipINFO4}{https://github.com/McReaper/InternshipINFO4}
+\end{center}
+
+\subsection{Documentation du projet}
+
+<expliqué ce qui a été fait sans rentrer dans trop de détails>
+
+\subsection{Restructuration du code source du compilateur} 
+\label{warnings}
+
+\subsection{Implémentation des politiques sous forme de modules Linux}
+
+\subsection{Tests d'analyse de performances}
