--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -33,7 +33,10 @@ enseignants chercheurs.
 Mon employeur officiel reste donc l'université, c'est-à-dire l'UGA. Mon équipe 
 et moi-même étions localisé sur le campus, plus précisément dans le bâtiment 
 ``IMAG'', au quatrième étage consacré à la recherche dans le domaine 
-informatique (voir mon bureau sur la Figure~\ref{fig:imag}).
+informatique. Au début du stage, le mode de travail en présentiel m'était 
+interdit par le labo à cause de la situation sanitaire liée à la Covid. Puis 
+progressivement j'ai pu me rendre à mon bureau trois jours par semaine : les 
+lundis, mardis et vendredis (voir sur la Figure~\ref{fig:imag}).
 
 \begin{figure}[h!t] \centering
     \begin{tabular}{@{}c@{\hspace{5pt}}c@{}}
