--- a/sections/phaistos.tex
+++ b/sections/phaistos.tex
@@ -43,6 +43,7 @@ nous pensons que cette approche reste générale et pourrait s'appliquer sur tou
 types d'ordonnanceurs, de systèmes de fichier, etc.
 
 \subsection{Mon rôle dans ce projet}
+\label{mission}
 
 Pour résumer, PhaistOS se décompose donc en deux parties : le compilateur et 
 l'analyseur, ma mission portant uniquement sur le compilateur, ou autrement 
